everything compiles, yet i'm having new ideas the thing is to not consider vectors, but rather the index of the point in the array of points.

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -2,6 +2,6 @@ all:
 	g++ -c particules.cpp -o main.o
 	g++ main.o -o sfml-app -lsfml-graphics -lsfml-window -lsfml-system && ./sfml-app
 
-clear:
+clean:
 	$(RM) main.o
 	$(RM) sfml-app 
